--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,14 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["inventory", "management", "express", "mysql"],
+  "keywords": ["inventory", "management", "express", "mysql", "postgresql"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mysql": "^2.18.1",
+    "pg": "^8.11.3",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.6"
   }
